--- a/index.css
+++ b/index.css
@@ -6,6 +6,17 @@ body {
     margin-right: auto;
 }
 
+
+
+img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /* margin-right: 150px;
+  margin-left: 80px; */
+}
+
+
+
 #chord-vis {
     text-align: center;
 }
